net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/RouteTableApiTest[2021-04-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-81962686e318ff77b8e62563ce036c2c-db66d64bff385954-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "57f4c50512bbd9703dffbad1a951c8cf",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "23d4c498-661e-4fc7-bf77-94b2afa61be2",
        "x-ms-ratelimit-remaining-subscription-reads": "11696",
        "x-ms-request-id": "23d4c498-661e-4fc7-bf77-94b2afa61be2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155259Z:23d4c498-661e-4fc7-bf77-94b2afa61be2"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg2850?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-f147d70700f9b31e95461aea2386607f-ec2e6cac50692298-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d11876e675de46e576e0e067877c3de5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:00 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "0e7185f0-c1f9-4d1d-8892-87162d44f173",
        "x-ms-ratelimit-remaining-subscription-writes": "1122",
        "x-ms-request-id": "0e7185f0-c1f9-4d1d-8892-87162d44f173",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155300Z:0e7185f0-c1f9-4d1d-8892-87162d44f173"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850",
        "name": "csmrg2850",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "183",
        "Content-Type": "application/json",
        "traceparent": "00-312ff5a11e283ee607836e3a99349e85-8ac622e93ffc997b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8796307e5a5510c8046efcd917821991",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/78fcf94a-42d4-4aee-9054-57ed5fcf715c?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1074",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:02 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "873ac4dd-5d82-4032-8f77-5d2d16e56164",
        "x-ms-client-request-id": "8796307e5a5510c8046efcd917821991",
        "x-ms-correlation-request-id": "d1b97551-220c-413f-8a20-0576a967f8cd",
        "x-ms-ratelimit-remaining-subscription-writes": "1121",
        "x-ms-request-id": "78fcf94a-42d4-4aee-9054-57ed5fcf715c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155303Z:d1b97551-220c-413f-8a20-0576a967f8cd"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"38aa59ce-f10e-40e3-8389-21f624c6ac98\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"38aa59ce-f10e-40e3-8389-21f624c6ac98\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/78fcf94a-42d4-4aee-9054-57ed5fcf715c?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-312ff5a11e283ee607836e3a99349e85-5249ef5eaa322e88-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e450dc20ee5077c31665e0d77906c8e5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:03 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8e305f28-b852-4825-a238-bf956016de0c",
        "x-ms-client-request-id": "e450dc20ee5077c31665e0d77906c8e5",
        "x-ms-correlation-request-id": "b49e9f14-69c6-4af7-90a0-e8063ab5be11",
        "x-ms-ratelimit-remaining-subscription-reads": "11695",
        "x-ms-request-id": "3cf73d12-2745-4ddc-b66b-1fee887c74ff",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155303Z:b49e9f14-69c6-4af7-90a0-e8063ab5be11"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-312ff5a11e283ee607836e3a99349e85-f24a30c525f15349-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "379aea6d09a46f9c1f5155c5e9128d87",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1076",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:03 GMT",
        "ETag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9a98a0aa-e58c-4166-a8a8-7fd9e664d2ce",
        "x-ms-client-request-id": "379aea6d09a46f9c1f5155c5e9128d87",
        "x-ms-correlation-request-id": "997823c1-1c80-4440-a252-3947a96d293c",
        "x-ms-ratelimit-remaining-subscription-reads": "11694",
        "x-ms-request-id": "2683c96d-40c2-467c-8357-a8ff1df27b15",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155304Z:997823c1-1c80-4440-a252-3947a96d293c"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-bcf7b7319b58d57ac6afa57b1d8e0ef0-2e94017a8ef56ce8-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3ab9b1833431b441eb4111ea2e3aca2c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1076",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:04 GMT",
        "ETag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "36d9c92b-ffd0-4c8d-bb8a-ca85d197c214",
        "x-ms-client-request-id": "3ab9b1833431b441eb4111ea2e3aca2c",
        "x-ms-correlation-request-id": "07867263-2521-402d-88c0-5d175cb5d0b4",
        "x-ms-ratelimit-remaining-subscription-reads": "11693",
        "x-ms-request-id": "df99076a-48dc-4e78-99c1-32a833c77778",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155304Z:07867263-2521-402d-88c0-5d175cb5d0b4"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"a7a299d1-6edf-41df-9016-1193127cc3a8\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "672",
        "Content-Type": "application/json",
        "traceparent": "00-a6bbcd6b7b5e0555a60fd7665957cb62-ae92b71c9e11686a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "98478bc7b4e117a640e0c5fe99fd8e03",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            },
            {
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/468f05d0-78a5-46f3-85f2-617d7e8455ec?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1608",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:05 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6226ff55-8101-41fa-89d6-ef87fb12aaf8",
        "x-ms-client-request-id": "98478bc7b4e117a640e0c5fe99fd8e03",
        "x-ms-correlation-request-id": "b6d1226f-9f71-4ada-978c-63b5911db5c8",
        "x-ms-ratelimit-remaining-subscription-writes": "1120",
        "x-ms-request-id": "468f05d0-78a5-46f3-85f2-617d7e8455ec",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155305Z:b6d1226f-9f71-4ada-978c-63b5911db5c8"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"8ea8138b-415e-4646-935d-4f25c4866d9a\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"8ea8138b-415e-4646-935d-4f25c4866d9a\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"8ea8138b-415e-4646-935d-4f25c4866d9a\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/468f05d0-78a5-46f3-85f2-617d7e8455ec?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a6bbcd6b7b5e0555a60fd7665957cb62-d15ade454e5bc82e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5dfd2886f4cacea50aa2fa516f421aed",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:05 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "28800e37-77d7-47f8-ab42-f84a50b177dc",
        "x-ms-client-request-id": "5dfd2886f4cacea50aa2fa516f421aed",
        "x-ms-correlation-request-id": "291776c2-0f98-4a50-8ee8-5e052ad85138",
        "x-ms-ratelimit-remaining-subscription-reads": "11692",
        "x-ms-request-id": "2eb49488-4906-4d6e-8291-9194a3d204f0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155306Z:291776c2-0f98-4a50-8ee8-5e052ad85138"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a6bbcd6b7b5e0555a60fd7665957cb62-3a1f4f392b37712d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d5120db302e639dfd80eeffb68431e8e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1611",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:06 GMT",
        "ETag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e6c472f4-1702-4d0f-a1ec-b87ef369a58f",
        "x-ms-client-request-id": "d5120db302e639dfd80eeffb68431e8e",
        "x-ms-correlation-request-id": "0b16a4c0-5693-41be-bed2-cb6e8c6a4d5e",
        "x-ms-ratelimit-remaining-subscription-reads": "11691",
        "x-ms-request-id": "7bc63e55-3995-4ed4-8cc9-8b7f2c52c68f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155306Z:0b16a4c0-5693-41be-bed2-cb6e8c6a4d5e"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-6b0323c2d438ad60de0640de5197bd1a-4fd43ca7cb6ae707-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7077dfa030ffe238b385beaa9362c866",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1611",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:07 GMT",
        "ETag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "99013da6-1c3c-4ed2-aa76-2a2d225de46f",
        "x-ms-client-request-id": "7077dfa030ffe238b385beaa9362c866",
        "x-ms-correlation-request-id": "0d5d8942-3b54-4fc3-8b0e-1ed1e0120506",
        "x-ms-ratelimit-remaining-subscription-reads": "11690",
        "x-ms-request-id": "1a4cc7a5-bdf0-41a9-a4ad-05560f3846d0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155307Z:0d5d8942-3b54-4fc3-8b0e-1ed1e0120506"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet9288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet9288",
              "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"9c930c72-b857-4026-970b-2e42d9299fcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "536",
        "Content-Type": "application/json",
        "traceparent": "00-e10e28bb61a61e913a2838bb176367fa-30ba5007c621481a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "eaaf5ecb6b9f84ff49c385bb05aa66c7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/87527900-fa1f-42bb-abbf-3f9fa471e779?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1019",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:08 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8e583e50-59d8-4e65-958c-7049b1d17c34",
        "x-ms-client-request-id": "eaaf5ecb6b9f84ff49c385bb05aa66c7",
        "x-ms-correlation-request-id": "e1b92899-f81e-44ff-945f-2d3ca7695dd4",
        "x-ms-ratelimit-remaining-subscription-writes": "1119",
        "x-ms-request-id": "87527900-fa1f-42bb-abbf-3f9fa471e779",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155308Z:e1b92899-f81e-44ff-945f-2d3ca7695dd4"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"1eacb3d0-7174-4f1b-b52d-26656180ba63\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"1eacb3d0-7174-4f1b-b52d-26656180ba63\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/87527900-fa1f-42bb-abbf-3f9fa471e779?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e10e28bb61a61e913a2838bb176367fa-d4786680765c7a61-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0a2f8945339335efe0f3263bab7ddd08",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bb96e73f-ed10-44df-b31d-238b2e36e9ca",
        "x-ms-client-request-id": "0a2f8945339335efe0f3263bab7ddd08",
        "x-ms-correlation-request-id": "db5e42f6-dd5a-452b-abe9-568f5c5eca39",
        "x-ms-ratelimit-remaining-subscription-reads": "11689",
        "x-ms-request-id": "39817351-d36f-46bd-be99-979fcff85901",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155309Z:db5e42f6-dd5a-452b-abe9-568f5c5eca39"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e10e28bb61a61e913a2838bb176367fa-5a46f709aca27835-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2727f61e38b1219a702c156f489e4015",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:09 GMT",
        "ETag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "45d0e600-9802-4fa1-8b3d-9eea76dfd1c7",
        "x-ms-client-request-id": "2727f61e38b1219a702c156f489e4015",
        "x-ms-correlation-request-id": "87d3619c-cd30-4d9a-ba30-7dbe1c6dd3ce",
        "x-ms-ratelimit-remaining-subscription-reads": "11688",
        "x-ms-request-id": "619a3899-ffd0-4e0f-a272-ad1143a9ebd8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155310Z:87d3619c-cd30-4d9a-ba30-7dbe1c6dd3ce"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-605b3e8a085bf9f156cf6252f0723992-21d7be2ec37296b2-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7b750f1d5c7a4f337c7bafd883b1d757",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:10 GMT",
        "ETag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6a59ac0e-f5ed-48f6-8efc-bb0c6f8024b6",
        "x-ms-client-request-id": "7b750f1d5c7a4f337c7bafd883b1d757",
        "x-ms-correlation-request-id": "e340609a-3a2d-4246-9a4c-0b58fb325f64",
        "x-ms-ratelimit-remaining-subscription-reads": "11687",
        "x-ms-request-id": "9e2d79a9-f1b2-47ba-b102-39ff5903d5f9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155310Z:e340609a-3a2d-4246-9a4c-0b58fb325f64"
      },
      "ResponseBody": {
        "name": "azsmnet9180",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180",
        "etag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "2faa3c6f-2890-4212-89a6-8368b8f79d71",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8684",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180/routes/azsmnet8684",
              "etag": "W/\"a55a972b-5fc5-4812-ad6d-9862536f9419\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables/azsmnet9180?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a9b29488b520558ae67b37a0507bde85-e85761ecad97da80-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4d4219527f0d0dc3ee0e99661d80ec42",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/fa078670-5dc9-43b5-a148-654414646bd0?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:53:10 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/fa078670-5dc9-43b5-a148-654414646bd0?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "78613704-d9f8-4ec5-b76d-4ce2b77b1ed0",
        "x-ms-client-request-id": "4d4219527f0d0dc3ee0e99661d80ec42",
        "x-ms-correlation-request-id": "244800d7-d457-4dde-a44a-fbae16876bb0",
        "x-ms-ratelimit-remaining-subscription-deletes": "14968",
        "x-ms-request-id": "fa078670-5dc9-43b5-a148-654414646bd0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155311Z:244800d7-d457-4dde-a44a-fbae16876bb0"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/fa078670-5dc9-43b5-a148-654414646bd0?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-a9b29488b520558ae67b37a0507bde85-123bcfbf4a90751e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2f1cbe55f25c9e084c688d6cc2cc31fc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "51f6f284-f049-4188-93bc-a977a573e69f",
        "x-ms-client-request-id": "2f1cbe55f25c9e084c688d6cc2cc31fc",
        "x-ms-correlation-request-id": "54483849-1465-4025-aca8-51ef12932251",
        "x-ms-ratelimit-remaining-subscription-reads": "11686",
        "x-ms-request-id": "659dacde-a1b4-4069-b636-f8860c05229f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155311Z:54483849-1465-4025-aca8-51ef12932251"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2850/providers/Microsoft.Network/routeTables?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "71256d8f3b93f0508b7f8935d48d842b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:53:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "70889b11-e6fc-4b11-8995-5911c2e18d58",
        "x-ms-client-request-id": "71256d8f3b93f0508b7f8935d48d842b",
        "x-ms-correlation-request-id": "2e13979f-f67e-420a-8f14-965bc9983da6",
        "x-ms-ratelimit-remaining-subscription-reads": "11685",
        "x-ms-request-id": "f4ddbede-b7ac-4205-9ff2-286e213b6f6e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155312Z:2e13979f-f67e-420a-8f14-965bc9983da6"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1943584886",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
